<resources>
    <string name="app_name">Garbage Management System</string>
    <string name="activity_forget_password_tv_text">Forget Password</string>
    <string name="activity_forgetn_password_btn_submit">Submit</string>
    <string name="activity_forget_password_et_email">Email</string>
    <string name="facebook_app_id">539936533274024</string>
    <string name="fb_login_protocol_scheme">fb539936533274024</string>
    <string name="payment_sucess">Payment Successfully..</string>
    <string name="payment_sucess2">Thank you for completing the online payment process,your transaction has been processed successfully.. </string>
    <string name="activity_login_et_username">Username</string>
    <string name="activity_login_et_password">Password</string>
    <string name="activity_login_tv_forgot_password">Forgot Password ? </string>
    <string name="activity_login_tv_register">New User ? Register Here...</string>
    <string name="activity_login_btn_login">Login</string>
    <string name="activity_login_tv__text">Or Connect Using </string>
    <string name="activity_login_tv_remainder">Remember me</string>
    <string name="activity_login_btn_faceboook_login">Log in with FaceBook</string>
    <string name="activity_create_tv_customer_name">Customer Name</string>
    <string name="activity_create_tv_customer_customerGarbageCategory">Selected Garbage Category</string>
    <string name="activity_create_tv_customer_customerGarbageVehicleType">Selected Garbage Vehicle Type</string>
    <string name="activity_create_tv_customer_customerArea">Selected Customer Area</string>
    <string name="activity_create_tv_customer_customerTotalPayment">Total Payment</string>
    <string name="activity_create_btn_customer_continue">Continue</string>
    <string name="activity_register_et_fname">First name</string>
    <string name="activity_register_et_lname">Last name</string>
    <string name="activity_register_et_Address1">Address Line 1</string>
    <string name="activity_register_et_Address2">Address Line 2</string>
    <string name="activity_register_et_Address3">Address Line 3</string>
    <string name="activity_register_et_nic">NIC</string>
    <string name="activity_register_et_contactNo">Contact No</string>
    <string name="activity_register_et_location">Location</string>
    <string name="activity_register_et_email">Email</string>
    <string name="activity_register_et_password">Password</string>
    <string name="activity_register_et_comPassword">Confirm Password</string>
    <string name="activity_register_et_submit">Submit</string>
    <string name="activity_home_page_btn_getStart">Get Start</string>
    <string name="layout_item_button_name">Location</string>
    <string name="activity_add_request_tv_text">Create Request</string>
    <string name="activity_add_request_tv_category">Garbage Category Type</string>
    <string name="activity_add_request_tv_vehicle_category">Garbage Vehicle Type</string>
    <string name="activity_add_request_tv_area">Select Your Area</string>
    <string name="activity_add_request_tv_description">Description</string>
    <string name="activity_add_request_et_hint_description">Please Type Here Your Description...</string>
    <string name="activity_add_request_et_location_hint">Your Location Longitude</string>
    <string name="activity_add_request_et_location_hint2">Your Location Latitude</string>
    <string name="activity_add_request_et_location_hint3">Email</string>
    <string name="activity_add_request_btn_progress">Progress</string>
    <string name="activity_add_payment_tv_text">Add a Credit/Debit Card</string>
    <string name="activity_add_payment_et_card_no">Card number</string>
    <string name="activity_add_payment_et_month">MM</string>
    <string name="activity_add_payment_et_year">YY</string>
    <string name="activity_add_payment_et_security_code">Security Code</string>
    <string name="activity_add_payment_et_fname">First name</string>
    <string name="activity_add_payment_btn_done">Done</string>
    <string name="activity_add_payment_et_lname">Last name</string>
    <string name="activity_add_payment_confirm_tv">Payment Details</string>
    <string name="activity_add_payment_confirm_tv_name">Name</string>
    <string name="activity_add_payment_confirm_tv_garbage_type">Selected Garbage Category</string>
    <string name="activity_add_payment_confirm_tv_area_type">Selected Area</string>
    <string name="activity_add_payment_confirm_tv_vehicle_type">Selected Vehicle</string>
    <string name="activity_add_payment_confirm_tv_total_amount">Total Amount</string>
    <string name="activity_add_payment_confirm_btn_confirm">Confirm</string>
    <string name="asteriskred"><font color='#cc0029'>*</font></string>
    <string name="fcm_message">Hiii Hasarel</string>
    <string name="fcm_message_error">Error</string>
    <string name="msg_token_fmt">hi</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="activity_register">Register</string>
    <string name="activity_forgetPassword">Forget Password</string>
    <string name="activity_addrequest">Add Request</string>
    <string name="activity_addpayment">Add Payment</string>
    <string name="activity_create_payment">Create Payment</string>
    <string name="activity_paymenthistoery">Payment History</string>
    <string name="activity_request_history">Request History</string>
    <string name="activity_about">About</string>
    <string name="acitivty_feedback">Customer Feedback</string>
    <string name="activity_customer_request">Customer Request</string>
    <string name="nav_item_1">Home</string>
    <string name="nav_item_2">Payment History</string>
    <string name="nav_item_sync">Request History</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_logout">Logout</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_1</item>
        <item>@string/nav_item_2</item>
        <item>@string/nav_item_sync</item>
        <item>@string/nav_item_about</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="error_text">Error</string>
    <string name="success_text">Success</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="no_internet_connection_text">No Internet connection</string>
    <string name="confim_request">Are You Sure you want Continue ? </string>
    <string name="cancel_request"></string>
    <string name="no_data_fetched">No any data fetched!</string>
    <string name="turn_on_internet_connection_text">You have no active internet connection on this device. Please turn on mobile data or connect to wifi to proceed</string>
    <string name="sign_out_message">Are you sure you want to sign out.</string>
    <string name="want_to_proceed_message">Do you want to proceed?</string>
    <string name="fill_all_fields_message">Please fill all fields</string>
    <string name="fill_email_fields_message">Please fill all Required field</string>
    <string name="fill_password_fields_message">Please fill password field</string>
    <string name="email_verification_error">Please Verification Email!</string>
    <string name="email_verification_message">Please check your inbox and follow the instructions...</string>
    <string name="password_reset">Please check your email!</string>
    <string name="password_reset_message">Please check your inbox and follow the instructions...</string>
    <string name="password_reset_error">Invalid Email Address!</string>
    <string name="request_error">UnSuccessfully!</string>
    <string name="request_error_message">Your Request is UnSuccessfully!</string>
    <string name="password_reset_error_message">Please check your email again!</string>
    <string name="operations_failed_message">Operations failed.\nPlease try again.</string>
    <string name="settings_text">Settings</string>
    <string name="alert_text">Alert</string>
    <string name="alert_warning_text">Error</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="update_text">Update</string>
    <string name="remove_text">Remove</string>
    <string name="no_text">No</string>
    <string name="ok_text">OK</string>
    <string name="delete_text">Delete</string>
    <string name="search_text">Search</string>
    <string name="submit_text">Submit</string>
    <string name="device_not_compatible_text">Device not compatible</string>
    <string name="text_success">Success</string>
    <string name="text_update_success">Successfully Updated</string>
    <string name="splash_activity_sankaraa_text">Â© 2019 Sankaraa Pvt Ltd</string>
    <string name="login_activity_fill_all_fields_message_text">Please fill all fields</string>
    <string name="login_activity_account_number_saved_message_text">Account number saved</string>
    <string name="login_activity_user_email_hint">User email</string>
    <string name="login_activity_user_password_hint">Password</string>
    <string name="login_activity_account_number_hint">Account number</string>
    <string name="login_activity_change_account_number_text">Change account no</string>
    <string name="login_activity_login_button_text">Login</string>
    <string name="main_activity_title">My Dashboard</string>
    <string name="main_activity_reminders_text_hint">Reminders</string>
    <string name="main_activity_todo_text_hint">To Do</string>
    <string name="main_activity_my_visits">My Visits</string>
    <string name="main_activity_my_activities">My Activities</string>
    <string name="main_activity_short_cuts">Short Cuts</string>
    <string name="sync_activity_title">Sync Log</string>
    <string name="sync_activity_action_log_title">Sync Action Data</string>
    <string name="sync_activity_image_log_title">Sync Attachments</string>
    <string name="sync_activity_create_log_title">Create New</string>
    <string name="about_activity_title">About</string>
    <string name="global_search_activity_title">Global Search</string>
    <string name="quote_for_approval_list_activity_title">Quote for Approvals</string>
    <string name="quote_for_approval_approve_button_text">Approve</string>
    <string name="quote_for_approval_reject_button_text">Reject</string>
    <string name="appointment_list_activity_title">Appointment Task</string>
    <string name="phone_calls_list_activity_title">Phone Call Task</string>
    <string name="general_task_list_activity_title">General Task</string>
    <string name="task_list_activity_title">Tasks</string>
    <string name="task_details_activity_title">Task Details</string>
    <string name="task_details_actions_button_text">Actions</string>
    <string name="task_details_attach_button_text">Attachment</string>
    <string name="task_details_attach_button_view_text">View Attach</string>
    <string name="task_details_print_button_text">Print</string>
    <string name="task_details_view_attachments_text"><u>View Attachments</u></string>
    <string name="service_order_list_activity_title">My Service Visits</string>
    <string name="service_order_list_instructions_given_text">Instructions Given:</string>
    <string name="service_order_details_activity_title">Service Order Details</string>
    <string name="service_order_details_instructions_given_text">Incoming Notes:</string>
    <string name="service_order_details_actions_completed_text">Actions Completed:</string>
    <string name="service_order_details_actions_completed_hint">Actions Completed</string>
    <string name="title_activity_employee_list">Select User</string>
    <string name="dashboard_home_btn">Home</string>
    <string name="dashboard_analytics_btn">Analytics</string>
    <string name="syc_action_data_btn">Action Log</string>
    <string name="sync_create_new_btn">Create New Log</string>
</resources>