<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F4FFF5"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

   <RelativeLayout
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="30dp"
       android:layout_below="@id/toolbar"
       android:padding="15dp"
       android:background="@drawable/rounded_corners_white_background"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:id="@+id/activity_forget_password_tv_textData"
               android:text="@string/activity_forget_password_tv_text"
               android:textSize="30dp"
               android:textColor="@color/colorListTitleText"
               android:textStyle="bold"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/activity_forget_password_til_email"
               android:layout_below="@id/activity_forget_password_tv_textData"
               android:layout_marginTop="40dp"
               android:hint="@string/activity_forget_password_et_email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <EditText
                   android:id="@+id/activity_forget_password_et_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="text"
                   android:maxLines="1" />
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:layout_below="@id/activity_forget_password_til_email"
               android:layout_marginTop="30dp"
               android:id="@+id/activity_forget_password_btn_submit"
               android:layout_width="match_parent"
               android:background="@drawable/rounded_corners_button"
               android:textColor="@color/colorWhiteButton"
               android:textAllCaps="false"
               android:layout_marginBottom="20dp"
               android:text="@string/activity_forgetn_password_btn_submit"
               android:layout_height="wrap_content"/>

       </RelativeLayout>

   </RelativeLayout>

    </RelativeLayout>

</ScrollView>